create github pages

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="menu cid-r6QbJCtax9" once="menu" id="menu2-3s">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="menu cid-r6QbJCtax9" once="menu" id="menu2-3s">
 
     
 
@@ -136,7 +136,7 @@
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 80%;">
-              <img src="assets/images/dsc03465-902x677.jpg" alt="" title="">
+              <img src="assets/images/dsc03465-2-902x677.jpg" alt="" title="">
             </div>
         </div>
     </div>
