--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ec0+cpQEKp8MGF949rg5VKBN9SVEwerxCN7EMuCHYWrEScW0P96IBI8TEjQSO2zq164mt3JF39mrzP3Dh7pHdIYaqdgDLfh0z4jdccRjD/+KAPEYAbtIVwqTj5GJRYl2">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ih3pzRcHDZ8yRRu3nN4zzi/wu79GikWAX+ziY66MUJR2bxHAH+v8B8rQoPFnP7C0Dg1R8gC1gqhxh8tvbOL5GvinGK4kHyrv9cVXt1Qt4Z7FHg+NV9xxT3N7UWAhBRsO">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
