--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C3+1pEisH+pIWSXDLZVNMYO+u6Qx003eGPGupI7Sb7nmfvrYQAVuFwPjDfvR7/enDFucJnG49pktgIkGZSDl8PO4YM0EbA+1ll+kycYPiWGWYr9noYZLFOKzDO/90OuC">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jqOjwqVuCrxPMI0VD/XQL/Foq5E7oC3S9jABvYcTioPP/euQ87Nf6PiVh39nioh6VdqHAKzL15JuH92d8p4AExRyXzcj6NOgvWJtOw5OEur2q6KPt0/X4UViY+fgIlkx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
