create github pages

--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PX0oEDSBsfejpp0pxzj7VvNSBOS3wf2vHFHhfE8o/eyaKyCCjDjXysFi6eC2tc6zCjvFeCdgKenREX72R2ZzYSa8pEoQm9Z290G/9Th0c59nvwYpZ1R0e9gvNnFSuhkN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="auQTvOXx/zoWc7wJnuxZn5E6EfUvuTyaIWk1YMl4728JhoPDrKz0hor60WDUZRU15WZEpqeuRP6OA5B0rrEbCyGCU6BAtyvzYWDQKl9nq6KHzaeFdyIffuUe9FBBwHZd">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
