--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H5gL9dqMSL3RRO6XM80WHi3Q1wTQA0GyIeN8bqlEsuzMhmvI4q5BwTO1yHvP5BJG7FJHVqDQSrV8/K7FxIZKBWnusiOis/TqvJ//kdSwMUz5/MbLCLx8sHd0JDs2hPO7">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2cwVUixnwqW7T03W4Vt4e8eilqnV5juC96F0G2yc8N1osvUPBjmzVvj5QwSdaAOxj9ewl5gHlKLTMhrxqM0ej+4MOJSxzBZ2ynadwVzGdr9wTcDWYBtkjADiuO5q74Ey">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">SUBSCRIBE</button></span>
