--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sTPnZU0XA7rS6+LRaLgwgqixZUx8QizOsqxU1YNhdFYsu2wv1E/Oja/tEFgQtp0QP11Xs2W7JsLmV4w75SoxvvKkcPHb9I+bft2HiwX1f0Sou1X/elbrmaa5kblsctie">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pnw2PT1zsIkuiJuvacq3VUfLZbcKFT9UP6HxNKUWURVgw/lonF80n8Utjr/XhVFbX0VTOI5fRBlhh9oKICKm+Dw410P9MDSjRv5wXKNIP6botc1eaj6PvI5t1Y8tUut9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
