--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pnw2PT1zsIkuiJuvacq3VUfLZbcKFT9UP6HxNKUWURVgw/lonF80n8Utjr/XhVFbX0VTOI5fRBlhh9oKICKm+Dw410P9MDSjRv5wXKNIP6botc1eaj6PvI5t1Y8tUut9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H7Ct8LT5H9lRkJMmvN2IZo2iorL0Ld9qv3zHKiUBYMhgXNsgiUr8VSr/97cwS878ywmBLZsMfhAXRCRRQAC9uyNuPFQ7kxDVyVVzZQDcTOnzZt8B7DJmDwLzekB+xkyx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
