--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -130,11 +130,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_47" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_126" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">About Georgia</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_47" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Georgia is a junior at Jonesville High School. She is co-captain of the JHS Robotics Team. At the events, she typically serves as the ‘human player’ and interacts with the game/field pieces for the team’s alliances.
 <br><br>As a team captain, her teammates rely on Georgia for her organizational planning, her writing skills, and her knowledge of wiring.
@@ -146,11 +146,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_47" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_126" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_47" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">At Barrett Insurance we believe education is critical. To show this commitment to education, we developed the Barrett Insurance "Student of the Week Award of Excellence." This award started in the fall of 2015 to honor our local students. We continue to highlight and feature select students from around the region to showcase their scholastic acumen and their impressive achievements. 
 <br>
@@ -162,11 +162,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_47" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_126" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Past Recipients</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_47" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7"><strong>(in alphabetical order by first name)</strong> 
 <br>
@@ -208,11 +208,11 @@ Michael Rhoades<br>Olivia Bambacht
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_47" aria-expanded="false" aria-controls="collapse4">
+                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_126" aria-expanded="false" aria-controls="collapse4">
                                         <h4 class="mbr-fonts-style display-7">Participating Schools</h4>
                                     </a>
                                 </div>
-                                <div id="collapse4_47" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse4_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Camden-Frontier, 
 <br>Jonesville 
@@ -247,11 +247,11 @@ Waldron<br>Will Carleton Academy</p>
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_48" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_127" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_48" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">The Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project brings together local youth and adults to document Michigan's traditional barn structures. We want to increase youth awareness of the rich agricultural history of the area and preserve it for generations to come.<br><br>Barrett Insurance is working on this survey in conjunction with the Michigan Barn Preservation Network and Michigan State University. The survey will be available at the Michigan State University Museum. &nbsp;<br></p>
                                     </div>
@@ -259,11 +259,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_48" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_127" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">Seeking Partners</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_48" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Barrett Insurance needs your help. If you are willing to drive around, commit to surveying a one square mile area from the comfort of your vehicle and completing our specially designed ‘windshield survey,' (which allows us to documents barns and farmsteads without entering private property) then give us a call today to find out how you can help preserve these undocumented treasures and the legacy of our area.
 <br>
@@ -273,11 +273,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_48" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_127" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Get Involved</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_48" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">If you would like to get involved with the Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project, call Barrett Insurance at (517) 849-1000.</p>
                                     </div>
