--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F01A0Eu57NvRMp/FpBmhc0J5mxpB7M/9dFx69iCWSdNpzxWmOw3SmK4AO2YrHRLp1XqjBr54UckFQThyLifBHFyjMRW5LawUoqrtRVsW20bdaEqAas73r4MK1M0mzalh">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3XYjncXIne4ZWa1IdBty8fBfxcWhC4wME40R12Y7hscOFIUz7rBxxsg7HCuX2N4qcrw0mkl5seZ+R/srvv1NUjHP8zraiGdzSl2UYQgskd0r2JARJKdGKp9BHSwtLCHx">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
